favicon fix (works on firefox)

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 
 {% block head %}
 <head>
-<link rel="icon" href="{{ url_for('static', filename='tiramisu.ico') }}">
-<title>Tiramisu - Name History and Hypixel Stats</title>
+<title>tiramisu - something or other</title>
+<link rel="shortcut icon" href="/static/tiramisu.ico">
 </head>
 {% endblock %}
 
