--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,9 @@
 {% extends "index.html" %}
-
-
-
-
 {% block head %}
 <!--- HEADER --->
 <head>
     <title>Profile for {{ displayname }} | Tiramisu</title>
-    <link rel="icon" href="https://cached.imagescaler.hbpl.co.uk/resize/scaleHeight/815/cached.offlinehbpl.hbpl.co.uk/news/OMC/AsdaResized-20150223115224441.jpg">
+    <link rel="shortcut icon" href="https://mc-heads.net/head/{{uuid}}">
     <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ url_for('static', filename='splide.css') }}" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
