--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
 <!--- HEADER --->
 <head>
     <title>Profile for {{ displayname }} | Tiramisu</title>
-    <link rel="shortcut icon" href="https://mc-heads.net/head/{{uuid}}">
     <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
     <link href="{{ url_for('static', filename='splide.css') }}" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
@@ -72,7 +71,7 @@ function scrollFunction() {
 
 <div class="row">
     <div class="columnZ">
-        <img style='position: relative;margin-top:10px; margin-left:-500px;z-index:3;' src='https://mc-heads.net/body/{{ uuid }}/right'><br>
+        <img style='position: relative;margin-top:10px; margin-left:-500px;z-index:3;' src='https://crafatar.com/renders/body/{{uuid}}?overlay'><br>
         <div style='margin-right:1%;margin-top:-300px;z-index:2;' class="splide">
             <div class="splide__track">
                 <ul class="splide__list">
@@ -726,8 +725,18 @@ function scrollFunction() {
         {% endfor %}
 
         <div class="h2d">BedWars</div>
-        <p>[DOTHIS☆] {{username}} <br>
-        DOTHIS Prestige - DOTHIS% to [DOTHIS☆] <br>
+        <p>
+            <b><span class="{{bwOverallStats['prestige'][1]}}">
+                [{{bwOverallStats['level']}}☆]
+            </span></b>
+            {{username}} <br>
+            <b><span class="{{bwOverallStats['prestige'][1]}}">
+                {{bwOverallStats['prestige'][0]}}
+            </span></b>
+            Prestige - <b>{{bwOverallStats['prestige'][2]}}%</b> to 
+            <b><span class="{{bwOverallStats['prestige'][1]}}">[{{bwOverallStats['level']+1}}☆]
+            </span></b>
+            <br>
         {{bwOverallStats['Experience']}} experience <br></p>
 
         {{bwOverallStats['games_played_bedwars']}} games played <br>
