LIKELY UNSTABLE: Infected with cancer. Happened a couple builds ago- requests seems to reject some stuff after the mojang API. Logs found at https://gist.github.com/literaiiy/f979bc4e2ecea8a145166e6b55d8dbb7. Weird spacing in profile fixed.

--- a/templates/base.html
+++ b/templates/base.html
@@ -188,13 +188,11 @@ function scrollFunction() {
             Last session: <b>{{ lastSession }}</b><br> 
         {% endif %}
         {% if lastLogoutUnix != 1 %}
-            Last logout: <b>{{ lastLogout }}</b>
+            Last logout: <b>{{ lastLogout }}</b><br>
         {% endif %}
-        <br>
         {% if lastLoginUnix != 1 %}
-            Last login: <b>{{ lastLogin }}</b>
+            Last login: <b>{{ lastLogin }}</b><br>
         {% endif %}
-        <br>
         {% if firstLoginUnix != 1 %}
             First login: <b>{{ firstLogin }}</b>
         {% endif %}
